table made it better

--- a/index.html
+++ b/index.html
@@ -144,20 +144,7 @@
                         <p>Movie Info from OMDB goes here.</p>
                         <div class="col-md-9" id="movieInfo">
                             <!--table for movie info  -->
-                            <table class="info table img-right">
-                                <thead>
-                                    <tr>
-                                        <th>Title</th>
-                                        <th>Genre</th>
-                                        <th>Rating</th>
-                                        <th>Director</th>
-                                        <th>Actors</th>
-                                        <th>Runtime</th>
-                                        <th>plot</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="tbody">
-                                </tbody>
+                            <table class="info table table-responsive table-striped" id="tbInfo">                        
                             </table>
 
                         </div>
