--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <h2 class="brand-before">
                         <small>Welcome to</small>
                     </h2>
-                    <h1 class="brand-name">The Streaming Assistant</h1>
+                    <h1 class="brand-name">Streaming Assistant</h1>
                     <hr class="tagline-divider">
                     <h2>
                         <small>By
@@ -144,7 +144,7 @@
                         <p>Movie Info from OMDB goes here.</p>
                         <div class="col-md-9" id="movieInfo">
                             <!--table for movie info  -->
-                            <table class="info table table-responsive table-striped" id="tbInfo">                        
+                            <table class="info table table-responsive table-striped" id="tbInfo">
                             </table>
 
                         </div>
