--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <body>
 
-    <div class="brand">The Streaming Assistant</div>
+    <div class="brand">Streaming Assistant</div>
     <div class="address-bar">Northwestern Coding Boot Camp | 340 E Superior Street | Chicago IL </div>
 
     <!-- Navigation -->
@@ -141,7 +141,7 @@
                             <img class="img-responsive img-border img-left" src="img/intro-pic.jpg" alt="">
                         </div>
                         <hr class="visible-xs">
-                        <p>Movie Info from OMDB goes here.</p>
+                        <p>Info on the Show or Movie</p>
                         <div class="col-md-9" id="movieInfo">
                             <!--table for movie info  -->
                             <table class="info table table-responsive table-striped" id="tbInfo">
