--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <body>
 
-    <div class="brand">The Streaming Assistant</div>
+    <div class="brand">Streaming Assistant</div>
     <div class="address-bar">Northwestern Coding Boot Camp | 340 E Superior Street | Chicago IL </div>
 
     <!-- Navigation -->
