--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">Streaming Assistant</div>
-    <div class="address-bar">Northwestern Coding Boot Camp | 340 Superior Street | Chicago IL</div>
+    <div class="address-bar">Northwestern Coding Boot Camp | 340 E Superior Street | Chicago IL</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
