--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
                     <hr>
                 </div>
                 <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="img/slide-2.jpg" alt="">
+                    <img class="img-responsive img-border-left" src="img/aboutImg.jpeg" alt="">
                 </div>
                 <div class="col-md-6">
                     <p>Streaming Assistant was an idea thought up in Northwestern Coding Boot Camp in 2016.</p>
