--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Streaming Assistant</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <!-- Custom CSS -->
     <link href="business-casual.css" rel="stylesheet">
@@ -115,6 +115,30 @@
                             <strong>Josh Bruggeman, Mark Gildea, Ara Kim</strong>
                         </small>
                     </h2>
+                    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
+                    <span class="glyphicon glyphicon-thumbs-up"></span> Like
+                    </button>
+
+<!-- Modal -->
+<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">You're Great!</h4>
+      </div>
+      <div class="modal-body">
+        <p>Thanks for Liking our Page!</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
                 </div>
             </div>
         </div>
