--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Your content is available to stream at these locations:
+                    <h2 class="intro-text text-center">Find out where to stream this @ www.fan.tv
                     </h2>
                     <hr>
                     <div id="streamBox"></div>
@@ -188,7 +188,7 @@
         <script>
             $('.carousel').carousel({
                 interval: 5000 //changes the speed
-            })
+            });
         </script>
 
         <!-- script for movie data app -->
