--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         </script>
 
         <!-- script for movie data app -->
-        <script src="js/dataApp.js"></script>
+        <script src="js/dataApp2.js"></script>
 
 </body>
 
