--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <strong>Josh Bruggeman, Mark Gildea, Ara Kim</strong>
                         </small>
                     </h2>
-                    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
+                    <button type="button" id="likeButton" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
                     <span class="glyphicon glyphicon-thumbs-up"></span> Like
                     </button>
 
