firebase click Like

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
+    <!-- Jquery -->
+    <script src="https://code.jquery.com/jquery.js"></script>
+
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
+
     <!-- Custom CSS -->
     <link href="business-casual.css" rel="stylesheet">
 
@@ -115,7 +121,7 @@
                             <strong>Josh Bruggeman, Mark Gildea, Ara Kim</strong>
                         </small>
                     </h2>
-                    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
+                    <button type="button" id="clickButton" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
                     <span class="glyphicon glyphicon-thumbs-up"></span> Like
                     </button>
 
