total likes to DOM

--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class="col-md-6">
                     <p>Streaming Assistant was an idea thought up in Northwestern Coding Boot Camp in 2016.</p>
-                    <p>Our goal was to simplify the search for television and movie content viewing online.</p>
+                    <p>Our goal was to simplify the search for television and movie content.</p>
                     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
                 </div>
                 <div class="clearfix"></div>
@@ -110,7 +110,7 @@
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive" id="mark" src="img/mark.JPG" alt="">
                     <h3>Mark Gildea
 
                     </h3>
