--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <button type="button" id="clickButton" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
                     <span class="glyphicon glyphicon-thumbs-up"></span> Like
                     </button>
-                    <h4>Thanks for liking us <span id="clickValue"></span> times!</h4>
+                    <h4><span id="clickValue"></span> Likes</h4>
 
 <!-- Modal -->
 <div id="myModal" class="modal fade" role="dialog">
