--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                     <hr>
                     <form>
                         <div class="form-group">
-                            <label for="inputdefault">Enter TV Show or Movie</label>
-                            <input class="form-control" id="movie-input" type="text"><br>
+                            <label for="inputdefault">Enter TV Show or Movie. Be specific.(eg, The fellowship of the ring)</label>
+                            <input class="form-control enter" value="" id="movie-input" type="text"><br>
                             <input class="btn btn-default" id="findMovie" type="submit" value="Movie Search">
                         </div>
                     </form>
