--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Find out where to stream this @ <a href="https://www.fan.tv/">www.fan.tv</a>
+                    <h2 class="intro-text text-center">Find out where to stream this @ <a href="https://www.fan.tv/" target="_blank">www.fan.tv</a>
                     </h2>
                     <hr>
                     <div id="streamBox"></div>
