--- a/contact.html
+++ b/contact.html
@@ -111,11 +111,11 @@
                     </h2>
                     <hr>
                     <p>Questions? Comments? Concerns? Feel free to shoot us a message and we'll get back to you as soon as possible.</p>
-                    <form role="form">
+                    <form action="" method="post" role="form">
                         <div class="row">
                             <div class="form-group col-lg-4">
                                 <label>Name</label>
-                                <input type="text" class="form-control">
+                                <input type="text" class="form-control" required>
                             </div>
                             <div class="form-group col-lg-4">
                                 <label>Email Address</label>
