--- a/index.html
+++ b/index.html
@@ -165,11 +165,12 @@
 
                     </h2>
                     <hr>
-                    <form>
+                    <form id="contact" method="post" action="">
                         <div class="form-group">
                             <label for="inputdefault">Enter TV Show or Movie. Be specific.(eg, The fellowship of the ring)</label>
-                            <input class="form-control enter" value="" id="movie-input" type="text"><br>
+                            <input class="form-control enter" value="" id="movie-input" type="text" required><br>
                             <input class="btn btn-default" id="findMovie" type="submit" value="Movie Search">
+                            <span class="error"></span>
                         </div>
                     </form>
 
@@ -180,14 +181,14 @@
                         </div>
                         <hr class="visible-xs">
                         <!-- <p>Info on the Show or Movie</p> -->
-                        <div class="col-md-6" id="movieInfo">
+                        <div class="col-md-4" id="movieInfo">
                             <!--table for movie info  -->
                             <table class="info table table-responsive table-striped" id="tbInfo">
                             </table>
 
 
                         </div>
-                            <div class="col-md-3" id="youtube"></div>
+                            <div class="col-md-5" id="youtube"></div>
                     </div>
                 </div>
             </div>
