--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
                     <hr>
                     <form id="contact" method="post" action="">
                         <div class="form-group">
-                            <label for="inputdefault">Enter TV Show or Movie. Be specific.(eg, The fellowship of the ring)</label>
-                            <input class="form-control enter" value="" id="movie-input" type="text" required><br>
-                            <input class="btn btn-default" id="findMovie" type="submit" value="Movie Search">
+                            <label for="inputdefault">Enter TV Show or Movie. Be specific.(eg, The Fellowship of the Ring)</label>
+                            <input class="form-control enter" value="" id="movie-input" type="text" required=""><br>
+                            <input class="btn btn-default" id="findMovie" type="submit" value="Movie Search" required="">
                             <span class="error"></span>
                         </div>
                     </form>
