--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         <div class="form-group">
                             <label for="inputdefault">Enter TV Show or Movie. Be specific.(eg, The fellowship of the ring)</label>
                             <input class="form-control enter" value="" id="movie-input" type="text"><br>
-                            <input class="btn btn-default" id="findMovie" type="submit" value="Movie Search">
+                            <input class="btn btn-default" id="findMovie" type="submit" value="Search">
                         </div>
                     </form>
 
