--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="col-sm-4 text-center">
                   <div class="sticker josh">
-                    <!-- <img class="img-responsive" src="img/josh.jpg" alt=""> -->
+                   
                     </div>
                     <h3>Josh Bruggeman
 
@@ -113,13 +113,14 @@
                 </div>
                 <div class="col-sm-4 text-center">
                   <div class="sticker mark">
-                    <!-- <img class="img-responsive" id="mark" src="img/mark.JPG" alt=""> --></div>
+                    </div>
                     <h3>Mark Gildea
 
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <div class="sticker ara">
+                    </div>
                     <h3>Ara Kim
 
                     </h3>
