--- a/about.html
+++ b/about.html
@@ -107,21 +107,21 @@
                   <div class="sticker josh">
                    
                     </div>
-                    <h3>Josh Bruggeman
+                    <h3 class="names">Josh Bruggeman
 
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
                   <div class="sticker mark">
                     </div>
-                    <h3>Mark Gildea
+                    <h3 class="names">Mark Gildea
 
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
                     <div class="sticker ara">
                     </div>
-                    <h3>Ara Kim
+                    <h3 class="names">Ara Kim
 
                     </h3>
                 </div>
