--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
                     </h2>
                     <hr>
-                    <form id="contact" method="post" action="">
+                    <form id="contact" action="" method="post" role="form">
                         <div class="form-group">
                             <label for="inputdefault">Enter TV Show or Movie. Be specific.(eg, The Fellowship of the Ring)</label>
                             <input class="form-control enter" value="" id="movie-input" type="text" required=""><br>
