--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
-                  <div class="sticker mark">
+                  <div class="sticker center">
                     </div>
                     <h3 class="names">Mark Gildea
 
