--- a/index.html
+++ b/index.html
@@ -165,13 +165,20 @@
 
                     </h2>
                     <hr>
-                    <form>
+                    <form name="myForm"  action="index.html" method="post" onsubmit="return validateForm()">
                         <div class="form-group">
+
                             <label for="inputdefault">Enter TV Show or Movie. Be specific.(eg, The fellowship of the ring)</label>
-                            <input class="form-control enter" value="" id="movie-input" type="text"><br>
-                            <input class="btn btn-default" id="findMovie" type="submit" value="Movie Search">
+                              <input name="fname" class="form-control" id="movie-input" type="text"><br>
+                              <input class="btn btn-default" id="findMovie" type="submit"
+                               value="Movie Search">
+
+
+
                         </div>
                     </form>
+
+
 
                     <div class="row">
 
@@ -187,7 +194,7 @@
 
 
                         </div>
-                            <div class="col-md-3" id="youtube"></div>
+                        <div class="col-md-3" id="youtube"></div>
                     </div>
                 </div>
             </div>
