two youtube videos

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         </div>
                         <hr class="visible-xs">
                         <!-- <p>Info on the Show or Movie</p> -->
-                        <div class="col-md-4" id="movieInfo">
+                        <div class="col-md-9" id="movieInfo">
                             <!--table for movie info  -->
                             <table class="info table table-responsive table-striped" id="tbInfo">
                             </table>
@@ -192,9 +192,10 @@
 
                         </div>
 
-                        <div class="col-md-5" id="youtube"></div>
 
                     </div>
+                    <br>
+                    <div  id="youtube"></div>
                 </div>
             </div>
         </div>
